--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,6 +17,11 @@ h3 {
     font-size: 20px;
 }
 
+img {
+    width: 50px;
+    height: 50px;
+}
+
 .flexContainer, #iconsContainer {
     display: flex;
     flex-direction: row;
